--- a/04-dbapp/host/package.json
+++ b/04-dbapp/host/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mf-colorlist",
+  "name": "host",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
-    "build:start": "cd dist && PORT=3002 npx serve",
+    "build:start": "cd dist && PORT=8080 npx serve",
     "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
@@ -27,12 +27,12 @@
     "style-loader": "^3.3.0",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "tailwindcss": "^2.0.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sweetalert2": "^11.7.18"
+    "react-dom": "^18.2.0"
   }
 }
